[tool.poetry]
name = "py_gist_pile"
version = "v0.0.28"
description = ""
authors = ["jgithub <jgithub1@jeano.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.5.4"
pylint = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
